@startuml

title __SERVICE's Class Diagram__\n

  namespace  {
    namespace b.edu.resources.service {
      interface ub.edu.resources.service.AbstractFactoryData {
          {abstract} + createDAOArtista()
          {abstract} + createDAOClient()
          {abstract} + createDAOEpisodi()
          {abstract} + createDAOFollowers()
          {abstract} + createDAOFollowings()
          {abstract} + createDAOPreferencia()
          {abstract} + createDAOSerie()
          {abstract} + createDAOTemporada()
          {abstract} + createDAOUsuari()
          {abstract} + createDAOValoracioCor()
          {abstract} + createDAOValoracioEstrellas()
          {abstract} + createDAOVisualitzacio()
      }
    }
  }
  

  namespace  {
    namespace b.edu.resources.service {
      class ub.edu.resources.service.DataService {
          {static} - uniqueInstance : DataService
          + addClient()
          + addFollower()
          + addFollowing()
          + addPreferencia()
          + addUser()
          + addVisualitzacio()
          + getAllArtistes()
          + getAllClients()
          + getAllCorValoracions()
          + getAllEpisodis()
          + getAllEpisodis()
          + getAllEstrellaValoracions()
          + getAllFollowers()
          + getAllFollowings()
          + getAllPreferencias()
          + getAllSeries()
          + getAllTemporades()
          + getAllTemporades()
          + getAllUsuaris()
          + getAllVisualitzacions()
          + getClientByIdClient()
          + getClientByUsuariAndPassword()
          + getEpisodiByTitolTemporadaIdEpisodi()
          + getFollowersByIdUser()
          + getFollowingsByIdUser()
          {static} + getInstance()
          + getListValCor()
          + getListValEstrella()
          + getPreferenciaSerieByIdUserAndIdSerie()
          + getPreferredSeriesByIdUser()
          + getSerieByTitol()
          + getUsuariById()
          + getUsuariByIdClientAndUsername()
          + getUsuarisByClient()
          + getValoracioCor()
          + getValoracioEstrella()
          + getVisualitzacioSerieByIdUserAndSerie()
          + getVisualizedSeriesByIdUser()
          + modificarPerfil()
          + removeFollower()
          + removeFollowing()
          + removePreferencia()
          + removeVisualitzacio()
          + setValoracioCor()
          + setValoracioEstrella()
          - DataService()
      }
    }
  }
  

  namespace  {
    namespace b.edu.resources.service {
      class ub.edu.resources.service.FactoryMOCK {
          + createDAOArtista()
          + createDAOClient()
          + createDAOEpisodi()
          + createDAOFollowers()
          + createDAOFollowings()
          + createDAOPreferencia()
          + createDAOSerie()
          + createDAOTemporada()
          + createDAOUsuari()
          + createDAOValoracioCor()
          + createDAOValoracioEstrellas()
          + createDAOVisualitzacio()
      }
    }
  }
  

  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOArtista : artistaDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOClient : clientDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOEpisodi : episodiDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOFollowers : followersDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOFollowings : followingsDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOPreferencia : preferenciaDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOSerie : serieDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOTemporada : temporadaDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOUsuari : usuariDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOValoracioCor : valoracioCorDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOValoracioEstrellas : valoracioEstrellasDAO
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOVisualitzacio : visualitzacioDAO
  ub.edu.resources.service.FactoryMOCK .up.|> ub.edu.resources.service.AbstractFactoryData


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
